Refactored drawing code to layers and strokes, optimized to use UIBezierPath

--- a/Drawn/Base.lproj/Main.storyboard
+++ b/Drawn/Base.lproj/Main.storyboard
@@ -83,7 +83,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1cL-Zt-Xid">
+                            <navigationBar contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1cL-Zt-Xid">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <animations/>
                                 <items>
@@ -96,7 +96,7 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cay-Mf-TJv">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cay-Mf-TJv">
                                 <rect key="frame" x="0.0" y="64" width="600" height="472"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Line Width: 3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="10z-by-vYm">
@@ -182,7 +182,7 @@
                                     <constraint firstItem="4d8-39-uxh" firstAttribute="leading" secondItem="cay-Mf-TJv" secondAttribute="leading" id="zXt-8F-oqQ"/>
                                 </constraints>
                             </scrollView>
-                            <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="tVB-Pt-Bax">
+                            <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tVB-Pt-Bax">
                                 <rect key="frame" x="0.0" y="536" width="600" height="64"/>
                                 <animations/>
                             </adBannerView>
@@ -192,6 +192,7 @@
                         <constraints>
                             <constraint firstItem="1cL-Zt-Xid" firstAttribute="top" secondItem="mbf-GL-3Oc" secondAttribute="bottom" id="0fX-pX-O8N"/>
                             <constraint firstItem="tVB-Pt-Bax" firstAttribute="top" secondItem="cay-Mf-TJv" secondAttribute="bottom" id="3JG-6h-RMD"/>
+                            <constraint firstItem="ZB3-x1-noq" firstAttribute="top" secondItem="tVB-Pt-Bax" secondAttribute="bottom" id="5dK-Dd-0DF"/>
                             <constraint firstItem="1cL-Zt-Xid" firstAttribute="leading" secondItem="cay-Mf-TJv" secondAttribute="leading" id="83U-jU-Pc4"/>
                             <constraint firstAttribute="trailing" secondItem="cay-Mf-TJv" secondAttribute="trailing" id="ErW-dE-g8S"/>
                             <constraint firstItem="1cL-Zt-Xid" firstAttribute="leading" secondItem="eaq-Xv-tkr" secondAttribute="leading" id="K1w-VL-tDP"/>
@@ -319,7 +320,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="udh-AG-TgD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1628" y="828.5"/>
+            <point key="canvasLocation" x="2412" y="98.5"/>
         </scene>
         <!--Color Picker View Controller-->
         <scene sceneID="A7D-Fq-K1q">
@@ -404,34 +405,34 @@
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="KDU-Ih-usb" firstAttribute="leading" secondItem="chh-wh-bd8" secondAttribute="leading" id="0bR-q2-JaK"/>
-                            <constraint firstItem="4bc-UV-TYJ" firstAttribute="top" secondItem="FWB-Ly-iaX" secondAttribute="bottom" constant="29" id="3Ep-sB-q8R"/>
-                            <constraint firstItem="FWB-Ly-iaX" firstAttribute="leading" secondItem="KDU-Ih-usb" secondAttribute="leading" id="3Ig-We-tjf"/>
-                            <constraint firstItem="SzB-NU-Eol" firstAttribute="top" secondItem="dRz-zl-0CE" secondAttribute="bottom" constant="3" id="5T9-Xi-NHD"/>
-                            <constraint firstItem="chh-wh-bd8" firstAttribute="centerY" secondItem="zJX-bc-9gy" secondAttribute="centerY" id="8xt-gc-B5Q"/>
-                            <constraint firstItem="FWB-Ly-iaX" firstAttribute="centerY" secondItem="2Lb-ny-OZV" secondAttribute="centerY" id="BDg-9X-03t"/>
-                            <constraint firstItem="2Lb-ny-OZV" firstAttribute="leading" secondItem="R4N-lV-26Z" secondAttribute="leading" id="Bek-o1-VEh"/>
-                            <constraint firstItem="R4N-lV-26Z" firstAttribute="leading" secondItem="zJX-bc-9gy" secondAttribute="leading" id="GY6-uA-EL7"/>
-                            <constraint firstItem="dRz-zl-0CE" firstAttribute="leading" secondItem="4bc-UV-TYJ" secondAttribute="trailing" constant="22" id="Ij1-vw-KP6"/>
-                            <constraint firstItem="chh-wh-bd8" firstAttribute="top" secondItem="vGC-hR-3KG" secondAttribute="bottom" constant="23" id="IkN-Tf-qAR"/>
-                            <constraint firstItem="dRz-zl-0CE" firstAttribute="trailing" secondItem="2Lb-ny-OZV" secondAttribute="trailing" id="KCM-Hu-Fz6"/>
-                            <constraint firstItem="vGC-hR-3KG" firstAttribute="trailing" secondItem="zJX-bc-9gy" secondAttribute="trailing" id="SnW-MY-Ttr"/>
-                            <constraint firstItem="R4N-lV-26Z" firstAttribute="trailing" secondItem="2Lb-ny-OZV" secondAttribute="trailing" id="Tf5-er-DmN"/>
-                            <constraint firstItem="vGC-hR-3KG" firstAttribute="leading" secondItem="chh-wh-bd8" secondAttribute="leading" id="Umr-Ra-ine"/>
-                            <constraint firstItem="dRz-zl-0CE" firstAttribute="leading" secondItem="2Lb-ny-OZV" secondAttribute="leading" id="UuI-6y-Jvd"/>
-                            <constraint firstItem="SzB-NU-Eol" firstAttribute="top" secondItem="4bc-UV-TYJ" secondAttribute="bottom" constant="8" id="VzQ-OR-a1z"/>
-                            <constraint firstItem="4bc-UV-TYJ" firstAttribute="leading" secondItem="FWB-Ly-iaX" secondAttribute="leading" id="WLQ-6A-WDQ"/>
-                            <constraint firstItem="dRz-zl-0CE" firstAttribute="top" secondItem="2Lb-ny-OZV" secondAttribute="bottom" constant="20" id="YkB-mE-N98"/>
-                            <constraint firstItem="FWB-Ly-iaX" firstAttribute="top" secondItem="KDU-Ih-usb" secondAttribute="bottom" constant="32" id="aFv-XO-AyS"/>
-                            <constraint firstItem="vGC-hR-3KG" firstAttribute="top" secondItem="p3S-Fn-kLn" secondAttribute="bottom" id="eEk-VM-RSV"/>
-                            <constraint firstItem="KDU-Ih-usb" firstAttribute="centerY" secondItem="R4N-lV-26Z" secondAttribute="centerY" id="hR4-OS-bUz"/>
-                            <constraint firstItem="R4N-lV-26Z" firstAttribute="leading" secondItem="KDU-Ih-usb" secondAttribute="trailing" constant="19" id="jtV-g6-zbJ"/>
-                            <constraint firstItem="vGC-hR-3KG" firstAttribute="leading" secondItem="ZTa-yC-aIX" secondAttribute="leading" id="kaY-f8-vVo"/>
-                            <constraint firstItem="zJX-bc-9gy" firstAttribute="top" secondItem="vGC-hR-3KG" secondAttribute="bottom" constant="19" id="r6E-tA-tB7"/>
-                            <constraint firstAttribute="trailing" secondItem="2Lb-ny-OZV" secondAttribute="trailing" id="rmX-mL-Qcw"/>
-                            <constraint firstItem="2Lb-ny-OZV" firstAttribute="top" secondItem="R4N-lV-26Z" secondAttribute="bottom" constant="23" id="uBp-LG-pHn"/>
-                            <constraint firstItem="4bc-UV-TYJ" firstAttribute="centerY" secondItem="dRz-zl-0CE" secondAttribute="centerY" id="vrR-eO-DQY"/>
-                            <constraint firstItem="zJX-bc-9gy" firstAttribute="trailing" secondItem="R4N-lV-26Z" secondAttribute="trailing" id="xEU-1x-cJY"/>
+                            <constraint firstItem="dRz-zl-0CE" firstAttribute="leading" secondItem="4bc-UV-TYJ" secondAttribute="trailing" constant="22" id="1dk-kL-QdE"/>
+                            <constraint firstItem="zJX-bc-9gy" firstAttribute="top" secondItem="vGC-hR-3KG" secondAttribute="bottom" constant="19" id="1um-ze-KCJ"/>
+                            <constraint firstItem="SzB-NU-Eol" firstAttribute="top" secondItem="dRz-zl-0CE" secondAttribute="bottom" constant="3" id="2XN-GV-vk0"/>
+                            <constraint firstItem="R4N-lV-26Z" firstAttribute="leading" secondItem="KDU-Ih-usb" secondAttribute="trailing" constant="19" id="2sJ-Ua-rlC"/>
+                            <constraint firstItem="chh-wh-bd8" firstAttribute="top" secondItem="vGC-hR-3KG" secondAttribute="bottom" constant="23" id="3hK-Vv-MMZ"/>
+                            <constraint firstItem="FWB-Ly-iaX" firstAttribute="leading" secondItem="4bc-UV-TYJ" secondAttribute="leading" id="3kF-FA-LFC"/>
+                            <constraint firstItem="2Lb-ny-OZV" firstAttribute="leading" secondItem="dRz-zl-0CE" secondAttribute="leading" id="5bk-cT-Tsc"/>
+                            <constraint firstAttribute="trailing" secondItem="zJX-bc-9gy" secondAttribute="trailing" id="6Gd-QT-vDb"/>
+                            <constraint firstItem="dRz-zl-0CE" firstAttribute="trailing" secondItem="2Lb-ny-OZV" secondAttribute="trailing" id="9lT-so-icd"/>
+                            <constraint firstItem="R4N-lV-26Z" firstAttribute="leading" secondItem="zJX-bc-9gy" secondAttribute="leading" id="Eqr-2B-jFS"/>
+                            <constraint firstItem="vGC-hR-3KG" firstAttribute="top" secondItem="p3S-Fn-kLn" secondAttribute="bottom" id="GVD-an-jJm"/>
+                            <constraint firstItem="zJX-bc-9gy" firstAttribute="centerY" secondItem="chh-wh-bd8" secondAttribute="centerY" id="Jz8-hL-Vs0"/>
+                            <constraint firstItem="zJX-bc-9gy" firstAttribute="trailing" secondItem="vGC-hR-3KG" secondAttribute="trailing" id="Keg-1F-lc3"/>
+                            <constraint firstItem="zJX-bc-9gy" firstAttribute="trailing" secondItem="R4N-lV-26Z" secondAttribute="trailing" id="Ktp-We-aTm"/>
+                            <constraint firstItem="chh-wh-bd8" firstAttribute="leading" secondItem="vGC-hR-3KG" secondAttribute="leading" id="L8f-lD-XQu"/>
+                            <constraint firstItem="FWB-Ly-iaX" firstAttribute="centerY" secondItem="2Lb-ny-OZV" secondAttribute="centerY" id="Ruw-Aq-Pcz"/>
+                            <constraint firstItem="SzB-NU-Eol" firstAttribute="top" secondItem="4bc-UV-TYJ" secondAttribute="bottom" constant="8" symbolic="YES" id="WzV-2l-gCq"/>
+                            <constraint firstItem="4bc-UV-TYJ" firstAttribute="top" secondItem="FWB-Ly-iaX" secondAttribute="bottom" constant="29" id="bBM-5l-dva"/>
+                            <constraint firstItem="chh-wh-bd8" firstAttribute="leading" secondItem="KDU-Ih-usb" secondAttribute="leading" id="cTa-aa-qgN"/>
+                            <constraint firstItem="R4N-lV-26Z" firstAttribute="centerY" secondItem="KDU-Ih-usb" secondAttribute="centerY" id="hw6-H2-rIQ"/>
+                            <constraint firstItem="dRz-zl-0CE" firstAttribute="top" secondItem="2Lb-ny-OZV" secondAttribute="bottom" constant="20" id="kZo-gH-L54"/>
+                            <constraint firstItem="4bc-UV-TYJ" firstAttribute="centerY" secondItem="dRz-zl-0CE" secondAttribute="centerY" id="lCO-AQ-rSQ"/>
+                            <constraint firstItem="R4N-lV-26Z" firstAttribute="trailing" secondItem="2Lb-ny-OZV" secondAttribute="trailing" id="mGk-S7-CG3"/>
+                            <constraint firstItem="2Lb-ny-OZV" firstAttribute="top" secondItem="R4N-lV-26Z" secondAttribute="bottom" constant="23" id="qIc-IE-2gG"/>
+                            <constraint firstItem="KDU-Ih-usb" firstAttribute="leading" secondItem="FWB-Ly-iaX" secondAttribute="leading" id="uyE-Bd-FRC"/>
+                            <constraint firstItem="4bc-UV-TYJ" firstAttribute="leading" secondItem="ZTa-yC-aIX" secondAttribute="leading" id="vhW-5V-Psh"/>
+                            <constraint firstItem="FWB-Ly-iaX" firstAttribute="top" secondItem="KDU-Ih-usb" secondAttribute="bottom" constant="32" id="ypz-c1-le0"/>
+                            <constraint firstItem="2Lb-ny-OZV" firstAttribute="leading" secondItem="R4N-lV-26Z" secondAttribute="leading" id="yza-hZ-evy"/>
                         </constraints>
                     </view>
                     <connections>
@@ -448,7 +449,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VfE-gw-N3a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2300" y="305"/>
+            <point key="canvasLocation" x="2339.5" y="486"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ogz-kw-M6C">
